# msl-equipment

./: .coveragerc  .gitignore  .readthedocs.yml  AUTHORS.rst  CHANGELOG.md  CHANGES.rst  MANIFEST.in  README.md  README.rst  condatests.py  conftest.py  cspell.json  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test_envs.py
.github/workflows/: ci.yml  docs.yml  run-tests.yml
dev/: 404.html  index.html  license.html  objects.inv  release-notes.html  sitemap.xml
dev/api/: index.html
dev/getting-started/: index.html
dev/license/: index.html
dev/release-notes/: index.html
dev/resources/: index.html
dev/schema/: accessories.html  alteration.html  equipment.html  financial.html  firmware.html  index.html  maintenance.html  measurand.html  quality_manual.html  reference_materials.html  specifications.html  specified_requirements.html  status.html
dev/search/: search_index.json
dev/validate/: index.html
dev/webapp/: index.html
docs/: api.rst  conf.py  config.rst  database.rst  docs_commands.py  examples.rst  index.md  index.rst  install.rst  requirements.txt  resources.rst  rtd_requirements.txt  usage.rst  validate.md  webapp.md
docs-old/: api.rst  database.rst  examples.rst  install.rst
docs-old/_api/: msl.equipment.config.rst  msl.equipment.connection_demo.rst  msl.equipment.connection_prologix.rst  msl.equipment.connection_pyvisa.rst  msl.equipment.connection_tcpip_hislip.rst  msl.equipment.connection_zeromq.rst  msl.equipment.constants.rst  msl.equipment.dns_service_discovery.rst  msl.equipment.exceptions.rst  msl.equipment.hislip.rst  msl.equipment.record_types.rst  msl.equipment.resources.aim_tti.mx_series.rst  msl.equipment.resources.avantes.avaspec.rst  msl.equipment.resources.bentham.benhw32.rst  msl.equipment.resources.bentham.benhw64.rst  msl.equipment.resources.bentham.tokens.rst  msl.equipment.resources.cmi.rst  msl.equipment.resources.dataray.datarayocx_64.rst  msl.equipment.resources.dataray.rst  msl.equipment.resources.energetiq.eq99.rst  msl.equipment.resources.energetiq.rst  msl.equipment.resources.greisinger.gmh3000.rst  msl.equipment.resources.greisinger.rst  msl.equipment.resources.mks_instruments.pr4000b.rst  msl.equipment.resources.nkt.rst  msl.equipment.resources.omega.ithx.rst  msl.equipment.resources.optosigma.rst  msl.equipment.resources.optronic_laboratories.ol756ocx_64.rst  msl.equipment.resources.picotech.errors.rst  msl.equipment.resources.picotech.picoscope.channel.rst  msl.equipment.resources.picotech.picoscope.picoscope_api.rst  msl.equipment.resources.picotech.picoscope.ps2000a.rst  msl.equipment.resources.picotech.picoscope.ps3000.rst  msl.equipment.resources.picotech.picoscope.ps4000a.rst  msl.equipment.resources.picotech.picoscope.structs.rst  msl.equipment.resources.picotech.rst  msl.equipment.resources.princeton_instruments.arc_instrument.rst  msl.equipment.resources.raicol.rst  msl.equipment.resources.rst  msl.equipment.resources.thorlabs.kinesis.api_functions.rst  (+10 more)
docs/_api/: modules.rst  msl.equipment.config.rst  msl.equipment.connection.rst  msl.equipment.connection_demo.rst  msl.equipment.connection_gpib.rst  msl.equipment.connection_message_based.rst  msl.equipment.connection_msl.rst  msl.equipment.connection_nidaq.rst  msl.equipment.connection_pyvisa.rst  msl.equipment.connection_sdk.rst  msl.equipment.connection_serial.rst  msl.equipment.connection_socket.rst  msl.equipment.connection_tcpip_vxi11.rst  msl.equipment.constants.rst  msl.equipment.database.rst  msl.equipment.factory.rst  msl.equipment.record_types.rst  msl.equipment.resources.aim_tti.rst  msl.equipment.resources.avantes.rst  msl.equipment.resources.bentham.benhw32.rst  msl.equipment.resources.bentham.benhw64.rst  msl.equipment.resources.bentham.errors.rst  msl.equipment.resources.bentham.rst  msl.equipment.resources.bentham.tokens.rst  msl.equipment.resources.cmi.sia3.rst  msl.equipment.resources.dataray.datarayocx_32.rst  msl.equipment.resources.dmm.rst  msl.equipment.resources.electron_dynamics.rst  msl.equipment.resources.electron_dynamics.tc_series.rst  msl.equipment.resources.isotech.millik.rst  msl.equipment.resources.isotech.rst  msl.equipment.resources.mks_instruments.rst  msl.equipment.resources.nkt.nktpdll.rst  msl.equipment.resources.omega.rst  msl.equipment.resources.optosigma.shot702.rst  msl.equipment.resources.optronic_laboratories.ol756ocx_32.rst  msl.equipment.resources.optronic_laboratories.ol_current_source.rst  msl.equipment.resources.optronic_laboratories.rst  msl.equipment.resources.picotech.picoscope.callbacks.rst  msl.equipment.resources.picotech.picoscope.channel.rst  (+73 more)
tests/: README  cleanup_os_environ.py  config1.xml  config2.xml  conftest.py  db.xml  db_asrl.xml  db_encoding_cp1252_txt.xml  db_encoding_utf8_txt.xml  db_encoding_xlsx.xml  db_err0.xml  db_err1.xml  db_err2.xml  db_err3.xml  db_err4.xml  db_err5.xml  db_err6.xml  db_err7.xml  db_user_defined.xml  db_user_defined_bad.xml  protocol_mock.py  test_cli.py  test_config.py  test_connection.py  test_connection_demo.py  test_connection_gpib.py  test_connection_message_based.py  test_connection_prologix.py  test_connection_pyvisa.py  test_connection_sdk.py  test_connection_serial.py  test_connection_socket.py  test_connection_tcpip.py  test_connection_tcpip_hislip.py  test_connection_tcpip_vxi11.py  test_connection_zeromq.py  test_connections.py  test_database.py  test_dns_service_discovery.py  test_factory.py  (+21 more)
tests-old/: cleanup_os_environ.py  test_config.py  test_connection.py  test_connection_demo.py  test_connection_gpib.py  test_connection_message_based.py  test_connection_prologix.py  test_connection_pyvisa.py  test_connection_sdk.py  test_connection_serial.py  test_connection_socket.py  test_connection_tcpip_hislip.py  test_connection_tcpip_vxi11.py  test_connection_zeromq.py  test_database.py  test_dns_service_discovery.py  test_factory.py  test_nidaqmx.py  test_record_types.py  test_utils.py
(+562 files in other folders)
